--- a/BWA HTML/index.html
+++ b/BWA HTML/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     
-    <nav>
+    <nav class="header">
+        <p>Hermes Medical</p>
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="index.html">Features</a></li>
