--- a/BWA HTML/index.html
+++ b/BWA HTML/index.html
@@ -10,13 +10,16 @@
 <body>
     
     <nav class="header">
-        <p>Hermes Medical</p>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="index.html">Features</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="login.html">Login</a></li>
-        </ul>
+        <div class="container">
+            <p class="logo">Hermes Medical</p>
+            <ul class="navigation">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="index.html">Features</a></li>
+                <li><a href="home.html">Home</a></li>
+            </ul>
+
+        </div>
     </nav>
 
 
