--- a/BWA HTML/login.html
+++ b/BWA HTML/login.html
@@ -3,15 +3,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Develop With Bhaskara</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="List Image and Anchor.html">Home</a></li>
-            <li><a href="features.html">Features</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="login.html">Login</a></li>
-        </ul>
+    <nav class="header">
+        <div class="container">
+            <p class="logo">Hermes Medical</p>
+            <ul class="navigation">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="index.html">Features</a></li>
+                <li><a href="home.html">Home</a></li>
+            </ul>
+
+        </div>
     </nav>
 
     <section>
