--- a/BWA HTML/admin.html
+++ b/BWA HTML/admin.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Develop With Bhaskara</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <section>
