--- a/BWA HTML/home.html
+++ b/BWA HTML/home.html
@@ -9,13 +9,17 @@
 </head>
 <body>
 
-    <nav>
-        <ul>
-            <li><a href="List Image and Anchor.html">Home</a></li>
-            <li><a href="index.html">Features</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="login.html">Login</a></li>
-        </ul>
+    <nav class="header">
+        <div class="container">
+            <p class="logo">Hermes Medical</p>
+            <ul class="navigation">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="index.html">Features</a></li>
+                <li><a href="home.html">Home</a></li>
+            </ul>
+
+        </div>
     </nav>
 
     <section>
