--- a/BWA HTML/index.html
+++ b/BWA HTML/index.html
@@ -5,6 +5,7 @@
     <title>Develop With Bhaskara</title>
     
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     
 </head>
 <body>
