--- a/CSS Bootstrap 4/index.html
+++ b/CSS Bootstrap 4/index.html
@@ -86,6 +86,52 @@
             </div>
         </div>
     </section>
+
+
+
+
+<section class="fitur mt-5">
+      <div class="container">
+        <h1 class="designtools">
+          We Design Tools to Unveil Your Superpowers
+        </h1>
+      </div>
+      
+      <div class="container points">
+        <div class="row">
+          <div class="col-sm">
+            <img src="../CSS Bootstrap 4/assets/icon2.png" alt="icons">
+            <br>
+            First click tests
+            <p>While most people enjoy casino gambling,</p>
+          </div>
+          <div class="col-sm">
+            <img src="../CSS Bootstrap 4/assets/icon1.png" alt="">
+            <br>
+            Design surveys
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </div>
+          <div class="col-sm">
+            <img src="../CSS Bootstrap 4/assets/icon3.png" alt="">
+            <br>
+            Preference tests
+            <p>The Myspace page defines the individual.</p>
+          </div>
+          <div class="col-sm">
+            <img src="../CSS Bootstrap 4/assets/icon bd.png" alt="">
+            <br>
+            Five second tests
+            <p>Personal choices and the overall personality of the person. </p>
+          </div>
+        </div>
+      </div>
+  
+</section>
+
+
+
+
+
    
 
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
